# timelapse-rs

./: Cargo.toml  README.md  post-build.ps1
src/: decoder.rs  encoder.rs  frame_selection.rs  main.rs  processing.rs  request.rs
